# SmartNS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Readme.md
doc/: APPENDIX.md  DEPLOY.md  EXP.md  INSTALL.md
include/: config.h  smartns.h
include/devx/: devx.h  devx_device.h  devx_mr.h
include/dma/: dma.h
include/fw/: mlx5_prm.h  mlx5_prm_manual.h  multi_os_prm.h
include/raw_packet/: raw_packet.h
include/rdma_cm/: libr.h  libsmartns.h
include/rxe/: rxe.h  rxe_hdr.h  rxe_opcode.h  rxe_param.h
include/tcp_cm/: tcp_cm.h
kernel/: .gitignore  Makefile  create_ib.symbers.sh  extra_symvers  ib.symvers.extra  insmod.sh  smartns_kernel.c  smartns_kernel.h  smartns_rdma.c  smartns_tcp.c
lib/: CMakeLists.txt  smartns_abi.h  smartns_dv.cpp  smartns_dv.h
scripts/: bf3_llc_bw.py  bf3_memory_bw.py  configure_bf2.sh  deploy_host1.sh  deploy_host2.sh
src/devx/: devx_device.cpp  devx_mr.cpp
src/dma/: dma.cpp
src/dpu/: config.cpp  controlpath.cpp  datapath.cpp  main.cpp  main_backup_send.cpp  smartns.cpp
src/raw_packet/: raw_packet.cpp
src/rdma_cm/: libr.cpp  libsmartns.cpp
src/rxe/: rxe_opcode.c  rxe_opcode.cpp  rxe_recv.cpp  rxe_req.cpp
src/tcp_cm/: tcp_cm.cpp
test/: CMakeLists.txt  arm_relay_1_1.cpp  arm_relay_1_1.sh  arm_relay_1_1_split.cpp  arm_relay_1_2.cpp  arm_relay_1_2.sh  arm_relay_1_3.cpp  arm_relay_2_1.cpp  arm_relay_2_2.cpp  arm_relay_2_3.cpp  bw.py  linked_list_rdma.cpp  linked_list_relay.cpp  relay_ws_stress.cpp  rx_dma_assisted.cpp  rx_rdma_assisted.cpp  rx_unlimited_working_set_in_cache.cpp  send_bw.cpp  snap_bench.cpp  solar_bench.cpp  test_context.cpp  test_pipe.cpp  tx_dma_assisted.cpp  tx_dma_assisted.sh  tx_header_only_offloading.cpp  tx_rdma_assisted.cpp  tx_rdma_assisted.sh  tx_rdma_assisted_split.cpp  write_bw.cpp  write_bw_libr.cpp
test/automation/: ae_automation_lib.py  exp1_plot.py  exp1_run_auto.py  exp2_plot.py  exp2_run_auto.py  exp4_plot.py  exp4_run_auto.py  svg_plot_lib.py
utils/: CRC.h  Crc32.cpp  allocator.cpp  allocator.h  buddy.cpp  buddy.h  common.hpp  file_helper.h  file_helpers.h  gflags_common.cpp  gflags_common.h  hdr_histogram.cpp  hdr_histogram.h  log.h  numautil.cpp  numautil.h  offset_handler.h  page.h  spinlock_mutex.h
